# my-rocket-app

./: Cargo.toml  Rocket.toml  index.html.tera  main.rs  routes.rs  style.css
