[package]
name = "my_rocket_website"
version = "0.1.0"
edition = "2021"

# Dependencies to be used in this project
[dependencies]
rocket = { version = "0.5", features = ["json", "tls"] }
rocket_dyn_templates = { version = "0.1", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }